# custom-dep

asv_wave_sim/gz-waves/: CMakeLists.txt
asv_wave_sim/gz-waves/src/gui/plugins/waves_control/: CMakeLists.txt
mbzirc_custom/mbzirc_naive_radar/: CMakeLists.txt  package.xml
mbzirc_custom/mbzirc_naive_radar/hooks/: resource_paths.dsv.in
mbzirc_custom/mbzirc_naive_radar/src/: NaiveRadar.cc  NaiveRadar.hh  naive_radar_bridge.cc
